# jhchat

./: .gitignore  :w  Cargo.toml  README.md  \
client/: Cargo.toml
client/src/: init.rs  main.rs  process.rs  request.rs  worker.rs
core/: Cargo.toml
core/src/: config.rs  error.rs  lib.rs  server_state.rs
core/src/codec/: command.rs  message.rs  msg_codec.rs
core/src/encryption/: mod.rs  rsa_impl.rs
core/src/traits/: encrypt.rs
models/: Cargo.toml
models/src/: command.rs  communicate.rs  config.rs  error.rs  group.rs  lib.rs  message.rs  msg_codec.rs  server_state.rs  user.rs
models/src/codec/: command.rs  message.rs  mod.rs  msg_codec.rs
server/: Cargo.toml
server/src/: handler.rs  init.rs  main.rs  process.rs
