[workspace]
resolver = "2"
members = [
    "server", 
    "client", 
    "models"
]

[workspace.dependencies]
tokio = "1.25.0"
bytes = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-util = "0.7"
tokio-stream = "0.1"
futures = "0.3"
console-subscriber = "0.1"
serde = "1.0"
serde_json = "1.0"
iced = "0.8"
sha256 = "1.1"
chrono = "0.4"
strum = "0.24"
uuid = "1.3"
