[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
tokio.workspace = true
tokio-util.workspace = true
bytes.workspace = true
futures.workspace = true
tracing.workspace = true
sha256.workspace = true
colored.workspace = true
chrono = { workspace = true, features = ["unstable-locales"] }
strum = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4", "fast-rng", "macro-diagnostics"] }
rsa.workspace = true
rand.workspace = true
async-trait.workspace = true

