[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path="../models" }
tokio = { version = "1.25.0", features = ["full", "tracing"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-util = "0.7"
tokio-stream = "0.1"
futures = "0.3"
console-subscriber = "0.1"
