[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path="../models" }
tokio = { workspace = true, features = ["full", "tracing"] }
bytes.workspace = true
tracing.workspace = true 
tracing-subscriber.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
futures.workspace = true
console-subscriber.workspace = true
sha256.workspace = true
