[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
tokio = { workspace = true, features = ["full", "tracing"] }
bytes.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["local-time", "registry"] }
tracing-appender = { workspace = true }
time = { workspace = true, features = ["macros"] }
tokio-util.workspace = true
tokio-stream.workspace = true
futures.workspace = true
console-subscriber.workspace = true
sha256.workspace = true
